--- a/wechat_service/CMakeLists.txt
+++ b/wechat_service/CMakeLists.txt
@@ -5,7 +5,7 @@ project(wechart_service)
 set(INSTALL_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH "Installation directory for libraries")
 set(INSTALL_INC_DIR ${CMAKE_INSTALL_PREFIX}/include CACHE PATH "Installation directory for headers")
 
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src WECHAT_SERVICE_SRC)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} WECHAT_SERVICE_SRC)
 add_library(wechart_service STATIC ${WECHAT_SERVICE_SRC})
 target_include_directories(wechart_service PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
